<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accounts.AddDebtActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/i_owe"
                    android:layout_width="205dp"
                    android:layout_height="65dp"
                    android:checked="true"
                    android:textSize="17dp"
                    android:text="@string/i_owe" />

                <RadioButton
                    android:id="@+id/owe_to_me"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:textSize="17dp"
                    android:text="@string/owe_to_me" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/debt"
                android:layout_width="400dp"
                android:layout_height="@dimen/input_text_height"
                android:hint="@string/what_to_repay" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agent"
                android:layout_width="400dp"
                android:layout_height="@dimen/input_text_height"
                android:hint="@string/agent" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="400dp"
                android:layout_height="@dimen/input_text_height"
                android:id="@+id/comment"
                android:hint="@string/comment"/>

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_must_repay"
                android:textSize="22dp"
                android:gravity="center"
                android:layout_marginTop="11dp"/>

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/once_only"
                    android:layout_width="205dp"
                    android:layout_height="65dp"
                    android:checked="true"
                    android:textSize="17dp"
                    android:text="@string/once" />

                <RadioButton
                    android:id="@+id/continuous"
                    android:layout_width="205dp"
                    android:layout_height="65dp"
                    android:textSize="17dp"
                    android:text="@string/few_times" />

            </RadioGroup>

            <TextView
                android:id="@+id/text_first_repayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/radioGroup1"/>

            <Button
                android:id="@+id/date_button"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/set_date"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/text_period"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:textSize="22dp"
                android:text="@string/text_period"
                android:gravity="center"/>

            <RadioGroup
                android:id="@+id/period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/week"
                    android:layout_width="140dp"
                    android:layout_height="65dp"
                    android:checked="true"
                    android:textSize="17dp"
                    android:text="@string/week" />

                <RadioButton
                    android:id="@+id/month"
                    android:layout_width="140dp"
                    android:layout_height="65dp"
                    android:textSize="17dp"
                    android:text="@string/month" />

                <RadioButton
                    android:id="@+id/year"
                    android:layout_width="140dp"
                    android:layout_height="65dp"
                    android:textSize="17dp"
                    android:text="@string/year" />

            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/button_confirm"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:text="@string/confirm"
        android:layout_marginBottom="20dp"
        android:src="@drawable/button_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@id/button_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>